feat(swagger-ui): migrate to springdoc from springfox; fix(pmd): address PMD warnings